codama-macros/tests/node_attribute/number_type_node_invalid_format.fail.stderr
error: invalid format
 --> tests/node_attribute/number_type_node_invalid_format.fail.rs:3:36
  |
3 | #[codama(node(number_type(format = invalid)))]
  |                                    ^^^^^^^
